<resources>
    <string name="app_name">Weather App Kotlin</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="update_interval_title">Update Interval</string>
    <string name="save_summary_db_title">Save Summary in Database</string>
    <string name="save_summary_db_summary_on">Enabled</string>
    <string name="save_summary_db_summary_off">Disabled</string>
    <string name="unit_system_title">Unit System</string>


    <!-- In src/main/res/values/strings.xml -->
    <string name="min_temperature_title">Min Temperature for alert (Kelvin)</string>
    <string name="min_temperature_dialog_title">Set Minimum Temperature</string>
    <string name="max_temperature_title">Max Temperature for alert (Kelvin)</string>
    <string name="max_temperature_dialog_title">Set Maximum Temperature</string>
</resources>