<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sync_header">

        <ListPreference
            app:defaultValue="10"
            app:entries="@array/update_interval_entries"
            app:entryValues="@array/update_interval_values"
            app:key="update_interval"
            app:title="@string/update_interval_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="save_summary_db"
            app:summaryOff="@string/save_summary_db_summary_off"
            app:summaryOn="@string/save_summary_db_summary_on"
            app:title="@string/save_summary_db_title" />

        <ListPreference
            app:defaultValue="metric"
            app:entries="@array/unit_system_entries"
            app:entryValues="@array/unit_system_values"
            app:key="unit_system"
            app:title="@string/unit_system_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="278"
            app:dialogTitle="@string/min_temperature_dialog_title"
            app:key="min_temperature"
            app:title="@string/min_temperature_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="315"
            app:dialogTitle="@string/max_temperature_dialog_title"
            app:key="max_temperature"
            app:title="@string/max_temperature_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>